--- a/directory.css
+++ b/directory.css
@@ -7,6 +7,17 @@ body{
     color: white;
 }
 
+
+footer{
+    color: white;
+    /* display: inline; */
+    padding-top: 2rem;
+    font-size: 12px;
+    border-top: 1px solid rgb(85, 85, 85);
+    font-family: 'IBM Plex Mono', monospace;
+}
+
+
 .navbar-container{
     width: 100%;
 }
@@ -81,7 +92,7 @@ a:active{
 
 .container{
     padding-top: 2rem;
-    padding-left: 1rem;
+    padding-left: 2rem;
     padding-right: 1rem;
     display: grid;
     /* columns: 5; */
@@ -91,6 +102,7 @@ a:active{
     /* grid-template-rows: repeat(5, 1fr); */
     grid-column-gap: 1rem;
     grid-row-gap: 1px;
+    padding-bottom: 3rem;
  }
 
  @media only screen and (max-width: 1000px) {
@@ -131,6 +143,7 @@ a:active{
 
     .container{
         grid-template-columns: repeat(2, 1fr);
+        padding-left: 1rem;
 
      }
 
