--- a/submit.css
+++ b/submit.css
@@ -6,6 +6,14 @@ body{
     padding: 2rem;
     color: white;
 }
+footer{
+    color: white;
+    /* display: inline; */
+    padding-top: 2rem;
+    font-size: 12px;
+    border-top: 1px solid rgb(85, 85, 85);
+    font-family: 'IBM Plex Mono', monospace;
+}
 
 .navbar-container{
     width: 100%;
