--- a/directory.css
+++ b/directory.css
@@ -106,7 +106,9 @@ a:active{
  }
 
  @media only screen and (max-width: 1000px) {
-
+body{
+        padding: 1rem;
+    }
 
     .navbar{
         display: inline-block;
