--- a/submit.css
+++ b/submit.css
@@ -90,7 +90,9 @@ a:active{
 
 
  @media only screen and (max-width: 1000px) {
-
+body{
+        padding: 1rem;
+    }
 
     .title{
         width: 20px;
