--- a/info.css
+++ b/info.css
@@ -125,7 +125,7 @@ p{
     padding-left: 2rem;
     font-weight: 400;
     color: white;
-    font-size: 1.5vw;
+    font-size: 1.4vw;
 }
 
 .container-right{
@@ -176,10 +176,9 @@ p{
         padding-bottom: 2rem;
     }
 
-    /* .title{
-        width: 20px;
-    } */
-    
+    .process-page{
+        font-size: 16px;
+    }
 
 
     .navbar{
