--- a/process.css
+++ b/process.css
@@ -78,10 +78,7 @@ a:active{
     float:right;
 }
 
-/* .submit{
-    margin-right: 6rem;
-    float:right;
-} */
+
 
 .submit:hover{
     text-decoration: underline;
@@ -152,13 +149,7 @@ a:active{
     font-size: 3vw;
 
 }
-/* .content-description{
-    font-family: "ibm-plex-sans-condensed", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 1.5vw;
-    border-bottom: 1px solid white;
-} */
+
 .content-text1{
     font-family: "ibm-plex-sans-condensed", sans-serif;
     font-weight: 400;
@@ -167,17 +158,6 @@ a:active{
     padding-top: 2rem;
 }
 
-/* .column {
-    float: left;
-    width: 33.33%;
-    padding: 5px;
-  }
-  
-  .content-images::after {
-    content: "";
-    clear: both;
-    display: table;
-  } */
 
   .content-images1 {
     display: flex;
@@ -289,7 +269,7 @@ a:active{
     
     }
     
-    .content-description, .content-text1,.content-text2, .content-text3{
+    .content-text1,.content-text2, .content-text3{
         font-family: "ibm-plex-sans-condensed", sans-serif;
         font-weight: 400;
         font-style: normal;
